--- a/matises.ipynb
+++ b/matises.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,17 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[[  28.  -32.    4.   14.  -16.    2.]\n [ -32.   64.  -32.  -16.   32.  -16.]\n [   4.  -32.   28.    2.  -16.   14.]\n [  14.  -16.    2.  112. -128.   16.]\n [ -16.   32.  -16. -128.  256. -128.]\n [   2.  -16.   14.   16. -128.  112.]] \n\n[[  28.   14.   -7.  -32.  -16.    8.]\n [  14.  112.   14.  -16. -128.  -16.]\n [  -7.   14.   28.    8.  -16.  -32.]\n [ -32.  -16.    8.   64.   32.  -16.]\n [ -16. -128.  -16.   32.  256.   32.]\n [   8.  -16.  -32.  -16.   32.   64.]] \n\n[[ 16.   8.  -4.   8.   4.  -2.]\n [  8.  64.   8.   4.  32.   4.]\n [ -4.   8.  16.  -2.   4.   8.]\n [  8.   4.  -2.  64.  32. -16.]\n [  4.  32.   4.  32. 256.  32.]\n [ -2.   4.   8. -16.  32.  64.]] \n\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "G = np.array(\n",
     "    [[7,-8,1],\n",
@@ -67,19 +59,66 @@
     "    [2,16,2],\n",
     "    [-1,2,4]])\n",
     "\n",
-    "G1 = np.zeros((6,6))\n",
-    "G2 = np.zeros((6,6))\n",
-    "M1 = np.zeros((6,6))\n",
+    "G1 = np.zeros((9,9))\n",
+    "G2 = np.zeros((9,9))\n",
+    "M1 = np.zeros((9,9))\n",
     "\n",
-    "for i in range(6):\n",
-    "    for j in range(6):\n",
+    "for i in range(9):\n",
+    "    for j in range(9):\n",
     "        G1[i][j] = G[mu(i)][mu(j)] * M[nu(i)][nu(j)]\n",
     "        G2[i][j] = M[mu(i)][mu(j)] * G[nu(i)][nu(j)]\n",
     "        M1[i][j] = M[mu(i)][mu(j)] * M[nu(i)][nu(j)]\n",
     "\n",
     "print(G1, \"\\n\")\n",
     "print(G2, \"\\n\")\n",
-    "print(M1, \"\\n\")"
+    "print(M1, \"\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"G1.txt\", \"w\") as f:\n",
+    "    for i in range(9):\n",
+    "        f.write(str(G1[i][i]))\n",
+    "        f.write(\" \")\n",
+    "    f.write(\"\\n\")\n",
+    "    for i in range(9):\n",
+    "        for j in range(i):\n",
+    "            f.write(str(G1[i][j]))\n",
+    "            f.write(\" \")\n",
+    "\n",
+    "with open(\"G2.txt\", \"w\") as f:\n",
+    "    for i in range(9):\n",
+    "        f.write(str(G2[i][i]))\n",
+    "        f.write(\" \")\n",
+    "    f.write(\"\\n\")\n",
+    "    for i in range(9):\n",
+    "        for j in range(i):\n",
+    "            f.write(str(G2[i][j]))\n",
+    "            f.write(\" \")\n",
+    "\n",
+    "with open(\"M1.txt\", \"w\") as f:\n",
+    "    for i in range(9):\n",
+    "        f.write(str(M1[i][i]))\n",
+    "        f.write(\" \")\n",
+    "    f.write(\"\\n\")\n",
+    "    for i in range(9):\n",
+    "        for j in range(i):\n",
+    "            f.write(str(M1[i][j]))\n",
+    "            f.write(\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(1,5):\n",
+    "    print(2 * math.floor((i - 1) / (3 - 1)) * (2 * 3 - 1) + 2 * ((i - 1) % (3 - 1)) + 1)"
    ]
   },
   {
